--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "project",
+  "name": "rts",
   "version": "0.0.0",
   "authors": [
     {
@@ -16,4 +16,3 @@
     "grunt-contrib-jshint": "~0.6.2"
   }
 }
-
